[package]
name = "c3edit"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
loro = "0.16.12"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt", "net", "rt-multi-thread", "macros", "time"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
